syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.proj.models";

message BalanceCheckRequest{
    int32 account_number = 1;
}

//USD
message Balance{
    int32 amount = 1;
}

message WithdrawRequest{
    int32 account_number =1;
    int32 amount =2;
}

message Money{
    int32 value =1;
}


service BankService{

    //Unary
    rpc getBalance(BalanceCheckRequest) returns (Balance);

    //Server-Side Streaming
    rpc withdraw(WithdrawRequest) returns (stream Money);

}